Slight style changes to fix issues on mobile

--- a/index.css
+++ b/index.css
@@ -73,7 +73,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100%;
   margin-bottom: 50px;
   position: absolute;
   background: rgba(134, 134, 134, 0.1);
@@ -88,7 +87,8 @@ header img {
 }
 
 header p {
-  font-size: 2rem;
+  width: 290px;
+  font-size: 140%;
   margin-left: 10px;
 }
 
@@ -148,7 +148,7 @@ main p {
   width: 30%;
   min-width: 250px;
   height: auto;
-  margin: 10px;
+  margin: 15px auto;
 }
 
 footer {
@@ -231,7 +231,7 @@ footer {
 }
 
 .bannerLeftContent {
-  width: 50%;
+  width: 70%;
   height: 100%;
   margin-top: -75px;
   display: flex;
@@ -291,10 +291,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red; */
   width: 301px; /* Determins size of "border */
   height: 301px; /* Determins size of "border */
   margin: auto;
+  margin: 15px auto;
 }
 
 .shiny-wrapper::before {
